--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,23 @@
-
+torch>=1.9.0
+torchvision>=0.10.0
+torch-geometric>=2.0.0
+pyg-lib>=0.1.0
+torch-scatter>=2.0.9
+torch-sparse>=0.6.12
+torch-cluster>=1.5.9
+torch-spline-conv>=1.2.1
+numpy>=1.21.0
+scikit-learn>=1.0.0
+scipy>=1.7.0
+pandas>=1.3.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+tqdm>=4.62.0
+Pillow>=8.3.0
+opencv-python>=4.5.0
+albumentations>=1.0.0
+transformers>=4.10.0
+captum>=0.4.0
+stardist>=0.8.0
+csbdeep>=0.7.0
+tifffile>=2021.0.0
